# coedit

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
nginx/: nginx.conf
server/: Cargo.toml  Dockerfile  entrypoint.sh
server/src/: auth.rs  document.rs  main.rs  presence.rs  state.rs  storage.rs  types.rs
server/src/handlers/: http.rs  ws.rs
web/: .eslintrc.cjs  Dockerfile  entrypoint.sh  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/components/: CodeBlock.tsx  MarkdownRenderer.client.tsx  MarkdownRenderer.tsx
web/app/edit/[...slug]/: EditPageClient.tsx  page.tsx
web/app/lib/: api.ts  ot.ts  realtime.ts  ws-compat.ts
web/app/view/[...slug]/: ViewPageClient.tsx  page.tsx
web/types/: shiki-bundle.d.ts
